--- a/idc-app/src/main/resources/application.yml
+++ b/idc-app/src/main/resources/application.yml
@@ -9,13 +9,13 @@ spring:
     url: jdbc:mysql://db.iwellmass.com:3306/idc?characterEncoding=utf8
     username: root
     password: zjhz2017
-    
+
 server:
   port: 9306
 
 spring.jpa.hibernate.naming.physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 # spring.jpa.hibernate.ddl-auto: update
-# spring.jpa.show-sql: true
+spring.jpa.show-sql: true
 
 mybatis:
   mapper-locations: /mapper/**
