--- a/idc-core/pom.xml
+++ b/idc-core/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.iwellmass</groupId>
 		<artifactId>idc-parent</artifactId>
-		<version>2.1.0-SNAPSHOT</version>
+		<version>2.1.0</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
