--- a/idc-core/pom.xml
+++ b/idc-core/pom.xml
@@ -36,6 +36,7 @@
 		<dependency>
 			<groupId>com.iwellmass</groupId>
 			<artifactId>wac-common</artifactId>
+			<version>2.0-SNAPSHOT</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.springframework.data</groupId>
