--- a/idc-app/src/main/resources/application.yml
+++ b/idc-app/src/main/resources/application.yml
@@ -15,7 +15,7 @@ server:
 
 spring.jpa.hibernate.naming.physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 # spring.jpa.hibernate.ddl-auto: update
-# spring.jpa.show-sql: true
+spring.jpa.show-sql: true
 
 mybatis:
   mapper-locations: /mapper/**
