--- a/idc-app/src/main/resources/application.yml
+++ b/idc-app/src/main/resources/application.yml
@@ -41,6 +41,8 @@ eureka:
     leaseExpirationDurationInSeconds: 2
     status-page-url: http://eureka.iwellmass.com:${server.port}/swagger-ui.html
     prefer-ip-address: true
+    hostname: 10.0.0.11
+    instance-id: 10.0.0.11:${server.port}
   client:
     serviceUrl:
       defaultZone: http://eureka.iwellmass.com:8761/eureka/
