--- a/idc-app/src/main/resources/application.yml
+++ b/idc-app/src/main/resources/application.yml
@@ -41,6 +41,7 @@ eureka:
     leaseExpirationDurationInSeconds: 2
     status-page-url: http://eureka.iwellmass.com:${server.port}/swagger-ui.html
     prefer-ip-address: true
+    instance-id: ${spring.cloud.client.ipAddress}:${server.port}
   client:
     serviceUrl:
       defaultZone: http://eureka.iwellmass.com:8761/eureka/
@@ -84,6 +85,7 @@ eureka:
     leaseExpirationDurationInSeconds: 2
     status-page-url: http://grayeureka.iwellmass.com:${server.port}/swagger-ui.html
     prefer-ip-address: true
+    instance-id: ${spring.cloud.client.ipAddress}:${server.port}
   client:
     serviceUrl:
       defaultZone: http://zjhz:zjhz!2017@grayeureka.iwellmass.com:8761/eureka/
@@ -101,6 +103,7 @@ eureka:
     leaseExpirationDurationInSeconds: 2
     status-page-url: http://eureka.iwellmass.com:${server.port}/swagger-ui.html
     prefer-ip-address: true
+    instance-id: ${spring.cloud.client.ipAddress}:${server.port}
   client:
     serviceUrl:
       defaultZone: http://zjhz:zjhz!2017@eureka.iwellmass.com:8761/eureka/
