--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,7 @@ variables:
 dev maven package build:
   stage: maven-build
   script:
+    - echo $CI_PROJECT_DIR
     - mvn clean package -DskipTests -Pprd
     - docker-compose -f docker-compose-dev.yml build
     - docker-compose -f docker-compose-dev.yml up -d
@@ -18,12 +19,13 @@ dev maven package build:
 test maven package build:
   stage: maven-build
   script:
+    - echo $CI_PROJECT_DIR
     - mvn clean package -DskipTests -Pprd
     - docker-compose -f docker-compose-test.yml build
     - docker-compose -f docker-compose-test.yml up -d
   artifacts:
     name:
-        "artifact-idc-server"
+        "artifact-idc-server-$CI_PIPELINE_ID"
     paths:
       - idc-app/target/idc-app*.zip
     expire_in:
