--- a/idc-app/pom.xml
+++ b/idc-app/pom.xml
@@ -72,6 +72,12 @@
 		<dependency>
 			<groupId>org.quartz-scheduler</groupId>
 			<artifactId>quartz</artifactId>
+			<exclusions>
+				<exclusion>
+					<groupId>com.zaxxer</groupId>
+					<artifactId>HikariCP-java6</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
 		<dependency>
