--- a/idc-app/src/main/resources/application.yml
+++ b/idc-app/src/main/resources/application.yml
@@ -41,7 +41,7 @@ eureka:
     leaseExpirationDurationInSeconds: 2
     status-page-url: http://eureka.iwellmass.com:${server.port}/swagger-ui.html
     prefer-ip-address: true
-    instance-id: ${spring.cloud.client.ipAddress}:${server.port}
+    instance-id: ${spring.cloud.client.ip-address}:${server.port}
   client:
     serviceUrl:
       defaultZone: http://eureka.iwellmass.com:8761/eureka/
@@ -85,7 +85,7 @@ eureka:
     leaseExpirationDurationInSeconds: 2
     status-page-url: http://grayeureka.iwellmass.com:${server.port}/swagger-ui.html
     prefer-ip-address: true
-    instance-id: ${spring.cloud.client.ipAddress}:${server.port}
+    instance-id: ${spring.cloud.client.ip-address}:${server.port}
   client:
     serviceUrl:
       defaultZone: http://zjhz:zjhz!2017@grayeureka.iwellmass.com:8761/eureka/
@@ -103,7 +103,7 @@ eureka:
     leaseExpirationDurationInSeconds: 2
     status-page-url: http://eureka.iwellmass.com:${server.port}/swagger-ui.html
     prefer-ip-address: true
-    instance-id: ${spring.cloud.client.ipAddress}:${server.port}
+    instance-id: ${spring.cloud.client.ip-address}:${server.port}
   client:
     serviceUrl:
       defaultZone: http://zjhz:zjhz!2017@eureka.iwellmass.com:8761/eureka/
