--- a/idc-app/src/main/resources/application.yml
+++ b/idc-app/src/main/resources/application.yml
@@ -81,7 +81,7 @@ spring:
   profiles: gray
   datasource:
     driverClassName: com.mysql.jdbc.Driver
-    url: jdbc:mysql://grayeureka.iwellmass.com/idc?characterEncoding=utf8&useSSL=false
+    url: jdbc:mysql://grayeureka.iwellmass.com/idc_cx?characterEncoding=utf8&useSSL=false
     username: root
     password: zjhz2017
   jpa:
