--- a/idc-app/src/main/resources/application.yml
+++ b/idc-app/src/main/resources/application.yml
@@ -85,7 +85,7 @@ spring:
     username: root
     password: zjhz2017
   jpa:
-    show-sql: true
+    show-sql: false
 eureka:
   instance:
     leaseRenewalIntervalInSeconds: 1
