--- a/idc-app/src/main/resources/application.yml
+++ b/idc-app/src/main/resources/application.yml
@@ -76,6 +76,12 @@ feign:
         requestInterceptors:
         - com.iwellmass.auth.config.OAuth2FeignRequestInterceptor
         decode404: false
+
+idc.scheduler.start-auto: true        #  是否开启调度
+idc.scheduler.maxRunningJob: 20       # 调度的最大并发数(nodeJob的最大运行数量)
+idc.scheduler.callbackTimeout: true  # 任务回调超时时间  单位:秒  默认30分钟  1800秒
+
+
 ---
 spring:
   profiles: gray
