--- a/idc-app/src/main/resources/application.yml
+++ b/idc-app/src/main/resources/application.yml
@@ -137,5 +137,6 @@ eureka:
       duration: 5
 
 idc.scheduler.start-auto: true
-idc.scheduler.callbackTimeout: 7200  # 测试callbackTimeout 为2 * 60 * 60
+idc.scheduler.callbackTimeout: 7200  # 测试callbackTimeout 为 2 * 60 * 60
 idc.scheduler.openCallbackControl: true       # 是否开启回调监控功能，默认关闭
+idc.scheduler.maxRunningJobs: 4  # 最大并发数，测试为2个
