--- a/idc-api/pom.xml
+++ b/idc-api/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.iwellmass</groupId>
 		<artifactId>idc-parent</artifactId>
-		<version>2.1.2-SNAPSHOT</version>
+		<version>2.1.3</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
