--- a/idc-app/src/main/resources/application.yml
+++ b/idc-app/src/main/resources/application.yml
@@ -1,6 +1,10 @@
 spring:
   application:
     name: idc
+  cloud:
+    nacos:
+      discovery:
+        server-addr: eureka.iwellmass.com:8848
   jackson:
     serialization:
       WRITE_DATES_AS_TIMESTAMPS: false
@@ -34,21 +38,6 @@ supervise:
     autoApprove: true
     accessTokenValiditySeconds: 28800
     refreshTokenValiditySeconds: 57600
-
-eureka:
-  instance:
-    leaseRenewalIntervalInSeconds: 1
-    leaseExpirationDurationInSeconds: 2
-    status-page-url: http://eureka.iwellmass.com:${server.port}/swagger-ui.html
-    prefer-ip-address: true
-    instance-id: ${spring.cloud.client.ip-address}:${server.port}
-  client:
-    serviceUrl:
-      defaultZone: http://eureka.iwellmass.com:8761/eureka/
-    healthcheck:
-      enabled: true
-    lease:
-      duration: 5
 
 security:
   oauth2:
@@ -91,20 +80,6 @@ spring:
     url: jdbc:mysql://db.iwellmass.com:3306/idc?characterEncoding=utf8&useSSL=false
     username: root
     password: zjhz2017
-eureka:
-  instance:
-    leaseRenewalIntervalInSeconds: 1
-    leaseExpirationDurationInSeconds: 2
-    status-page-url: http://eureka.iwellmass.com:${server.port}/swagger-ui.html
-    prefer-ip-address: true
-    instance-id: ${spring.cloud.client.ip-address}:${server.port}
-  client:
-    serviceUrl:
-      defaultZone: http://zjhz:zjhz!2017@eureka.iwellmass.com:8761/eureka/
-    healthcheck:
-      enabled: true
-    lease:
-      duration: 5
 
 idc.scheduler.start-auto: true
 idc.scheduler.callbackTimeout: 7200  # 测试callbackTimeout 为 2 * 60 * 60
@@ -122,21 +97,6 @@ spring:
     password: zjhz2017
   jpa:
     show-sql: false
-eureka:
-  instance:
-    leaseRenewalIntervalInSeconds: 1
-    leaseExpirationDurationInSeconds: 2
-    status-page-url: http://grayeureka.iwellmass.com:${server.port}/swagger-ui.html
-    prefer-ip-address: true
-    instance-id: ${spring.cloud.client.ip-address}:${server.port}
-  client:
-    serviceUrl:
-      defaultZone: http://zjhz:zjhz!2017@grayeureka.iwellmass.com:8761/eureka/
-    healthcheck:
-      enabled: true
-    lease:
-      duration: 5
-    register-with-eureka: true
 
 idc.scheduler.start-auto: true
 idc.scheduler.callbackTimeout: 25  # 测试callbackTimeout 为25秒
@@ -150,20 +110,6 @@ spring:
     url: jdbc:mysql://db.iwellmass.com:3306/idc?characterEncoding=utf8&useSSL=false
     username: root
     password: zjhz2017
-eureka:
-  instance:
-    leaseRenewalIntervalInSeconds: 1
-    leaseExpirationDurationInSeconds: 2
-    status-page-url: http://eureka.iwellmass.com:${server.port}/swagger-ui.html
-    prefer-ip-address: true
-    instance-id: ${spring.cloud.client.ip-address}:${server.port}
-  client:
-    serviceUrl:
-      defaultZone: http://zjhz:zjhz!2017@eureka.iwellmass.com:8761/eureka/
-    healthcheck:
-      enabled: true
-    lease:
-      duration: 5
 
 idc.scheduler.start-auto: true
 idc.scheduler.callbackTimeout: 7200  # 测试callbackTimeout 为 2 * 60 * 60
